# ClipMaster

./: .env.example  .gitignore  build_installer.bat  run.bat  run.sh  run_release.bat  setup.bat  setup.sh
.github/workflows/: build-release.yml
clipmaster_app/: pubspec.yaml
clipmaster_app/lib/: main.dart
clipmaster_app/lib/core/ipc/: ipc_client.dart  ipc_message.dart
clipmaster_app/lib/core/logging/: dev_console.dart
clipmaster_app/lib/core/services/: account_service.dart  activity_service.dart  api_key_service.dart  auto_updater.dart  project_state.dart  proxy_video_service.dart
clipmaster_app/lib/core/ui/: cm_icons.dart  resizable_divider.dart  video_player_overlay.dart
clipmaster_app/lib/core/utils/: binary_paths.dart  env_config.dart  time_format.dart
clipmaster_app/lib/features/activity/widgets/: activity_page.dart  media_browser.dart
clipmaster_app/lib/features/api_keys/widgets/: api_key_settings.dart
clipmaster_app/lib/features/dev_console/widgets/: dev_console_panel.dart
clipmaster_sidecar/: __main__.py  pyproject.toml  requirements.txt  server.py
clipmaster_sidecar/models/: ipc_models.py
clipmaster_sidecar/services/: fact_generator.py  llm_gateway.py  media_tools.py  script_analyzer.py  stock_footage.py  twitch_search.py  viral_scout.py  youtube_search.py
clipmaster_sidecar/tests/: test_fact_generator.py  test_ipc_models.py  test_llm_gateway.py  test_media_tools.py  test_script_analyzer.py  test_stock_footage.py  test_twitch_search.py  test_viral_scout.py  test_youtube_search.py
docs/: ROADMAP.md
installer/: clipmaster.iss
(+9 files in other folders)
